compiler/tests/success/subarrays/x86-64/subarray2.jazz
export fn main (reg u64 i) -> reg u32 {
  stack u64[20] s;
  reg ptr u8[8] r;
  reg u32 res;

  s[u32 0] = 0;
  r = s[i:1];
  r[u64 0] = 1;

  s[i:1] = r;
  res = s[u32 0];
  return res;
}
