compiler/tests/fail/stack_allocation/x86-64/pointer_to_stack.jazz
fn f (reg ptr u64[2] r) -> reg u64 {
  reg u64 res;
  stack u64[1] a;
  a[0]=0;
  r[0:1] = a[0:1];
  res = r[0];
  return res;
}
